# MyCode

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE_CODE_ARCHITECTURE_LEARNING.md  COMPLETION_REPORT.md  Dockerfile  FINAL_AUDIT_REPORT.md  INTEGRATION_GUIDE.md  NEW_FEATURES_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PLATFORM_AUDIT.md  PROGRESS_REPORT.md  README.md  STRESS_TEST_REPORT.md  THIRD_ROUND_AUDIT_REPORT.md  USAGE_GUIDE.md  bench_optim.py  docker-compose.yml  out.txt  pyproject.toml  session-log.txt  smoke_test.py  test_chinese_input.py  test_integration.py  test_optim.py  test_run.py  test_state_integration.py  visual_test.py
benchmarks/: benchmark_results.txt  multi_round_stress_test.py  performance_benchmark.py  stress_test_results.txt
docs/: ADVANCED_IMPROVEMENT_PLAN.md
minicode/: __init__.py  agent_loop.py  agent_protocol.py  anthropic_adapter.py  api_retry.py  auto_mode.py  background_tasks.py  cli_commands.py  config.py  context_isolation.py  context_manager.py  cost_tracker.py  cron.example.json  file_review.py  headless.py  history.py  hooks.py  install.py  local_tool_shortcuts.py  logging_config.py  main.py  manage_cli.py  mcp.py  memory.py  mock_model.py  model_registry.py  openai_adapter.py  permissions.py  prompt.py  prompt_pipeline.py  safe_execution.py  session.py  skills.py  state.py  task_graph.py  task_tracker.py  tooling.py  tty_app.py  types.py  user_profile.py  (+2 more)
tests/: test_agent_loop.py  test_anthropic_adapter.py  test_cli_commands.py  test_config.py  test_functional_completeness.py  test_integration.py  test_mcp.py  (+11 more)
(+54 files in other folders)
